fix header spacing thing and title case

--- a/_sass/global.sass
+++ b/_sass/global.sass
@@ -155,6 +155,9 @@ h3
   line-height: 1.25
   +chambersBold
 
+h2 + h3
+  margin-top: 1rem
+
 h4
   text-transform: uppercase
   line-height: 1.1
